# gRPC-vs-REST

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  REFERENCES.md  RESULTS.md  api_client.py  api_server.py  docker-compose.yml  fastapi_server.py  model.py  myproject.yaml  pyproject.toml  restful_client.py  restful_server.py  test.py  test_init_logger.py
myproject/: __init__.py
myproject/subdir1/: __init__.py  class1.py
myproject/subdir1/subdir2/: class2.py
patient_data/: gen_data.py  patient_dataclass.py  protobuf_grpc.proto  protobuf_grpc.py  protobuf_grpc_pb2.py
protobuf/: patients.proto
test/: data_gen_obj.py  gen_data.py  json_rest.py  protobuf_grpc.proto  protobuf_grpc.py  protobuf_grpc_pb2.py
test/intialization/: test_init_logger.py
